--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.4.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
