--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,12 @@
     "date-fns": "^2.4.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^7.12.1",
     "sequelize": "^5.19.1",
+    "youch": "^2.0.10",
     "yup": "^0.27.0"
   },
   "devDependencies": {
