--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,3 +8,17 @@ services:
       POSTGRES_DB: meetapp
     ports:
       - '5432:5432'
+  redis-meetapp:
+    image: redis:4.0.5-alpine
+    command: ['redis-server', '--appendonly', 'yes']
+    hostname: redis
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis-data:/data
+
+networks:
+  redis-net:
+
+volumes:
+  redis-data:
