--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@sentry/node": "^5.6.2",
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.2",
     "cors": "^2.8.5",
     "date-fns": "^2.4.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.3.0",
+    "nodemailer-express-handlebars": "^3.1.0",
     "pg": "^7.12.1",
     "sequelize": "^5.19.1",
     "youch": "^2.0.10",
@@ -39,6 +44,7 @@
     "dev": "nodemon src/server.js",
     "pretest": "NODE_ENV=test sequelize db:migrate",
     "test": "NODE_ENV=test jest",
-    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all",
+    "queue": "nodemon src/queue.js"
   }
 }
