--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.1.0",
     "history": "^4.10.1",
     "polished": "^3.4.1",
     "prop-types": "^15.7.2",
