--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@rocketseat/unform": "^1.6.1",
     "axios": "^0.19.0",
+    "date-fns": "^2.4.1",
     "dotenv": "^8.1.0",
     "history": "^4.10.1",
     "immer": "^4.0.1",
@@ -48,10 +49,10 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.2",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-root-import": "^6.4.1",
     "customize-cra": "^0.8.0",
-    "eslint": "^6.5.1",
+    "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
