--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.0'
 services:
   db-meetapp:
-    image: postgres
+    image: postgres:11-alpine
     environment:
       POSTGRES_PASSWORD: docker
       POSTGRES_USER: postgres
