adicionadas variaveis de ambiente

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,6 @@
 # url e porta que a aplicação vai rodar
-APP_URL=http://localhost:3005
+REACT_APP_URL=http://localhost:3005
 
 # url e porta que a api está rodando
-API_URL=http://localhost:3333
+REACT_APP_API_URL=http://localhost:3333
 
