--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.1",
+    "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.3.0",
