(backend) retoques finais antes da entrega

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,11 +3,23 @@ NODE_ENV=development
 
 # Auth
 
-APP_SECRET=
+APP_SECRET=123456meetapp
 
 # Database
 
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASS=docker
+DB_NAME=meetapp
+
+# Redis
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+# Mail
+
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USER=
+MAIL_PASS=
